# OurbooksApp

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: MainWindow.hpp
core/src/: MainWindow.cpp  main.cpp
include/: AboutWidget.hpp  BookWidget.hpp  ExploreWidget.hpp  HomeWidget.hpp  MainWidgets.hpp  MenuBar.hpp  OptionsWidget.hpp
src/: AboutWidget.cpp  BookWidget.cpp  ExploreWidget.cpp  HomeWidget.cpp  MainWidgets.cpp  MenuBar.cpp  OptionsWidget.cpp
